$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

1.23b3 (jdgraeve)
------

- changes in Captive portal (jdegraeve):
  - Changed CP database to use serialisation
  - Almost directly read in the radius servers from the config instead of parsing the radius.db file we don't need

- updated base system to FreeBSD 4.11-RELEASE-p19

- updated Dnsmasq to 2.33 (bugfixes)

- updated ipsec-tools to 0.6.6 including setkey|racoon|racoonctl (fixes memleak)

- updated PHP to 4.4.4

- Addition of netstat -m|-s and kldstat to status

1.23b2
------

- changes in Captive portal (jdegraeve):
  - add PfSense ideas (slighty different implemented):
  * Import CP SSL idea from PfSense: Redirect both HTTP and HTTPS to the Captive Portal keeping in mind a SSL error (cert mismatch)
  * Add preliminary support for WPA and PPPoE pass-through

1.23b1
------

- updated base system to FreeBSD 4.11-RELEASE-p18 (mkasper)

- recompiled ipsec-tools without FreeBSD patch to use "security" syslog
  facility instead of "daemon" -> should get rid of excess debug messages
  from racoon (mkasper)

- do not generate anti-spoof rules for optional interfaces that have other interfaces
  bridged to them (as opposed to being bridged to another interface, which was already
  handled properly) when the filtering bridge is on (mkasper)

- added support for 3rd party extensions in the group management and dynamic menu system. (ptaylor)
  - Thanks to Leo Fante for code modifications

- changes in Captive portal (jdegraeve):
  - Fixes a bug in the way we handle authentication mechanism. (Potentially allowing double logins and faulty locking)
  - Add support for different MAC formatting styles.
  - Add support for per user bandwidth limitation.

1.22
----

- updated base system to FreeBSD 4.11-RELEASE-p16 (mkasper)

- updated Dnsmasq to 2.27

- added Role-based Access to WebGUI (ptaylor)